--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Libreria de iconos-->
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <!--Conectar CSS-->
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body onclick="PlayAudio()">
@@ -122,7 +122,7 @@ para caminar juntos hacia el siempre.”
 <!--JS -->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
-<script src="js/app.js"></script>
+<script src="js/script.js"></script>
 <script src="js/script.js"></script>
 <script>
   function PlayAudio (){
@@ -154,3 +154,4 @@ function abrirSobre() {
 
 </body>
 </html>
+
