--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitación M & A</title>
     <!--Icono en la pestaña-->
-    <link rel="shortcut icon" href="images/img logo anillo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img logo anillo.png" type="image/x-icon">
     <!--Libreria de animaciones AOS-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <!--Libreria de iconos-->
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <!--Conectar CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body onclick="PlayAudio()">
@@ -22,7 +22,7 @@
 <!-- sobre -->
 <div id="overlay-sobre">
     <div class="sobre-contenedor" onclick="abrirSobre()">
-        <img src="images/nuevo sobre.png" class="sobre" alt="Sobre">
+        <img src="nuevo sobre.png" class="sobre" alt="Sobre">
         <div class="texto-abrir">Abrir</div>
     </div>
 </div>
@@ -32,7 +32,7 @@
 
  <!--fondo a mano-->
 <header class="hero">
-   <img src="images/FONDO8.jpg" alt="Header" class="hero-img">
+   <img src="FONDO8.jpg" alt="Header" class="hero-img">
 </header>
 
 
@@ -53,7 +53,7 @@
 
     <div class="wedding-content" data-aos="fade-up" data-aos-delay="300">
       <div class="wedding-image left">
-        <img src="images/foto1.jpg">
+        <img src="foto1.jpg">
       </div>
 
       <div class="wedding-text">
@@ -66,7 +66,7 @@ para caminar juntos hacia el siempre.”
       </div>
 
       <div class="wedding-image right">
-        <img src="images/foto2.jpg">
+        <img src="foto2.jpg">
       </div>
     </div>
   </div>
@@ -104,8 +104,8 @@ para caminar juntos hacia el siempre.”
     </div>
 
     <!-- 🌸 Flores decorativas -->
-    <img src="images/peonia.png" alt="Flores decorativas" class="decoracion-flor inferior">
-    <img src="images/peonia.png" alt="Flores decorativas" class="decoracion-flor superior">
+    <img src="peonia.png" alt="Flores decorativas" class="decoracion-flor inferior">
+    <img src="peonia.png" alt="Flores decorativas" class="decoracion-flor superior">
   </div>
 
 
@@ -122,8 +122,8 @@ para caminar juntos hacia el siempre.”
 <!--JS -->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script> 
-<script src="js/script.js"></script>
-<script src="js/script.js"></script>
+<script src="app.js"></script>
+<script src="app.js"></script>
 <script>
   function PlayAudio (){
     document.getElementById("musica").play();
